<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="button_clear">C</string>
    <string name="button_back"><![CDATA[<---]]></string>
    <string name="button_modulo">%</string>
    <string name="button_divide">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiply">*</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_subtract">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_add">+</string>
    <string name="button_intdivide">//</string>
    <string name="button_0">0</string>
    <string name="button_point">.</string>
    <string name="button_equal">=</string>
    <string name="initial"></string>
</resources>